2007-11-08  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-ttls.c
	  po/POTFILES.in
		- (eap_method_ttls_new, setup_filepicker, eap_method_tls_new): set
			filepicker titles

2007-11-08  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.h
	  src/wireless-security/eap-method.c
		- (eap_method_default_file_chooser_filter_new): new function; default
			file filter for certificate file choosers

	* src/wireless-security/eap-method-tls.c
		- (setup_filepicker): use certificate file filter

	* src/wireless-security/eap-method-ttls.c
		- (eap_method_ttls_new): use certificate file filter

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (find_tag, file_to_g_byte_array): remove
		- (fill_one_object): use crypto bits to read certificates and read
			and decrypt private keys
		- (applet_dbus_settings_connection_fill_certs): use fill_one_object()

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.h
	  src/wireless-security/eap-method.c
		- (eap_method_validate_filepicker): move validate_filepicker()
			implementations here and actually do some validation

	* src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method-tls.c
		- (validate): use common eap_method_validate_filepicker()

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_finalize): deinit crypto bits
		- (nma_constructor): init crypto bits

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/utils/crypto.h
	  src/utils/crypto.c
		- Fix linkage of nm_crypto_error_quark() by moving implementation to
			the .c file
		- Provide an enum for NM_CRYPTO_KEY_TYPE_*
		- (decrypt_key): avoid possible memory leak

	* src/utils/crypto_nss.c
	  src/utils/crypto_gnutls.c
		- (crypto_decrypt): don't overrun the buffer on error

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/utils/crypto.c
	  src/utils/crypto_gnutls.c
	  src/utils/crypto_nss.c